--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'net.saliman.cobertura' version '2.3.1'
+    id 'jacoco'
     id 'com.github.kt3k.coveralls' version '2.8.2'
 }
 
@@ -10,7 +10,7 @@ archivesBaseName = "hangman"
 version = '1.0'
 mainClassName = "App"
 
-cobertura.coverageFormats = ['html', 'xml']
+
 
 repositories {
   mavenCentral()
@@ -18,6 +18,14 @@ repositories {
 
 dependencies {
   testCompile group: 'junit', name: 'junit', version: '4.+'
+
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true // coveralls plugin depends on xml format report
+        html.enabled = true
+    }
 }
 
 test {
